krakend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
  labels:
    app: krakend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: krakend
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
        - name: krakend
          image: devopsfaith/krakend:2.6
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: krakend-config
              mountPath: /etc/krakend
      volumes:
        - name: krakend-config
          configMap:
            name: krakend-config
