krakend/krakend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 2
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
      - name: krakend
        image: krakend
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "8080" ]
        volumeMounts:
            - name: config
              mountPath: /etc/krakend
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: krakend-config
