krakend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend
spec:
  type: ClusterIP
  selector:
    app: krakend
  ports:
    - port: 80
      targetPort: 8080
