krakend/krakend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: krakend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend-clusterip
                port:
                  number: 80
